# food_organizer

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  pg.dockerfile  tasks.toml
.github/workflows/: audit.yml  lint.yml  test.yml
migrations/2020-09-13-175750_enable_uuid/: down.sql
migrations/2020-09-13-180048_create_recipes/: down.sql  up.sql
migrations/2021-02-15-012043_create_ingredients/: down.sql  up.sql
migrations/2021-02-15-012053_create_recipes_ingredients/: down.sql  up.sql
scripts/: seed_data.py
src/: db.rs  lib.rs  main.rs  resource.rs  schema.rs
src/actions/: mod.rs  recipe_actions.rs
src/handlers/: recipe_handler.rs
src/models/: ingredient.rs  mod.rs  recipe.rs
src/models/queries/: mod.rs  recipe_queries.rs
tests/: mod.rs  test_recipe_handler.rs
tests/common/: mod.rs
