[package]
name = "food"
version = "0.1.0"
authors = ["Elang89 <elang8899@gmail.com>"]
edition = "2018"

[lib]
name = "food"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0.1"
actix-rt = "1.1.1"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
diesel = { version = "1.4.5", features = ["postgres", "r2d2"]}
uuid = { version = "0.8.1", features = ["serde", "v4"] }
chrono = { version = "0.4.15", features = ["serde"] }
env_logger = "0.7.1"
failure = "0.1.8"
