[package]
name = "food"
version = "0.1.0"
authors = ["Elang89 <elang8899@gmail.com>"]
edition = "2018"

[lib]
name = "food_lib"
path = "src/lib.rs"

[[bin]]
name = "food"
path = "src/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.1.0"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "chrono", "uuid"]}
diesel_migrations = "1.4.0"
uuid = { version = "0.6.5", features = ["serde", "v4"] }
chrono = { version = "0.4.15", features = ["serde"] }
env_logger = "0.8.3"
dotenv = "0.15.0"
actix-diesel = { version = "0.3.0", features = [ "actix-web" ] }

[dev-dependencies]
actix-rt = "2.0.2"
fake = "2.2.3"
rstest = "0.6.4"
async-std = { version = "*", features = ["attributes"]}
